# AxionLanguage

./: .gitignore  CMakeLists.txt  README.md  Weasel.sln  cerberus.ArgsCfg.json  cerberus.sln
core/: AST.cpp  AST.h  CMakeLists.txt  CallStackTrace.cpp  CallStackTrace.h  CompileTimeInterpreter.cpp  CompileTimeInterpreter.h  MetaParser.cpp  MetaParser.h  NodeBuilder.cpp  NodeBuilder.h  Parser.h  Result.h  StringUtility.h  TokenRepository.h  TokenStream.cpp  TokenStream.h  core.args.json  core.cpp  core.vcxproj  core.vcxproj.filters
core/Preambles/Function/: Lexer.cpp  Lexer.h
core/Preambles/Procedure/: Lexer.cpp  Lexer.h  OperatorDefinition.cpp  OperatorDefinition.h  OperatorRepository.cpp  OperatorRepository.h  Parser.cpp  Parser.h
core/Preambles/Type/: Lexer.cpp  Lexer.h
core/Preambules/Function/: Lexer.h
core/Preambules/Function/src/: Lexer.cpp
core/headers/: CodeLocation.h  Enumerate.h  MetaLexer.h  PreambleDefinition.h  PreambleRepository.h  PreambuleDefinition.h  PreambuleRepository.h  StringUtility.h  SyntaxRepository.h  TODO.h  Token.h  VirtualFile.h
core/src/: CodeLocation.cpp  MetaLexer.cpp  MetaParser.cpp  NodeBuilder.cpp  PreambleDefinition.cpp  PreambleRepository.cpp  PreambuleDefinition.cpp  PreambuleRepository.cpp  StringUtility.cpp  SyntaxRepository.cpp  TODO.cpp  Token.cpp  TokenRepository.cpp  TokenStream.cpp  VirtualFile.cpp  core.cpp
examples/: CMakeLists.txt  Cerberus.targets  example1.dog  examples.vcxproj  examples.vcxproj.filters
examples/src/: CodeLocation.cpp
